code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_19.wast
(assert_invalid
  (module (func $type-value-f32-vs-void
    (block (f32.const 1.0))
  ))
  "type mismatch"
)